package org.marco.designpattern.gof.behavioral.strategy;

public class ConcreteStrategy1 implements IStrategy {
    @Override
    public void algorithm() {
        System.out.println("algorithm 1");
    }
}
