package org.marco.designpattern.gof.behavioral.strategy;

public class ConcreteStrategy2 implements IStrategy {
    @Override
    public void algorithm() {
        System.out.println("algorithm 2");
    }
}
