package org.marco.designpattern.gof.behavioral.strategy;

/**
 * 策略接口类
 */
public interface IStrategy {
    void algorithm();
}
